When a focused accessible is styled away a focus event is fired on its nearest ancestor
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox84 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
(Whiteboard: [mac2020_2])
Attachments
(1 file)
STR:
- Load
data:text/html,<div role="grouping" aria-label="Group" id="grouping"><button onclick="this.style.visibility = 'hidden'; setTimeout(() => console.log(document.activeElement), 10)">kill me</button></div>
- Tab to "kill me" button and activate it.
Result:
A focus accessibility even will be fired on the grouping, and the js console will print the button
Expected:
A focus accessibility event should be fired on the doc, and the js console should pring the body element.
While this is obviously a DOM bug (bug 1673035), the fix in a11y should be pretty simple.
:eeejay: what are the priority and severity of this bug? It helps us to determine the one of bug 1673035.
Assignee | ||
Comment 2•4 years ago
|
||
Currently, the focus will be emitted on the accessible's visible
container, even if it is not focusable.
Assignee | ||
Comment 3•4 years ago
|
||
Mirko,
I set a priority and severity. I managed to code around the DOM bug, so maybe it should be removed as a blocker?
Eitan: yes, if it doesn't block this bug, please remove it as a blocker.
Comment 6•4 years ago
|
||
bugherder |
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Patch verified with 84.0b2, 85.0a1 (2020-11-19) on macOS 10.15.
Description
•