Bug 1673036 - If focused accessible is styled away, emit focus event on document. r=Jamie

Previously, the focus was emitted on the accessible's visible
container, even if it was not focusable.

Differential Revision: https://phabricator.services.mozilla.com/D94746